prueba de git en ayuda

--- a/html/ayuda.html
+++ b/html/ayuda.html
@@ -33,7 +33,7 @@
     <main>
      
      <p>
-       Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempora illo nam quae repellat, eligendi obcaecati itaque odio rem enim error. Exercitationem sunt corrupti minus iure quisquam asperiores ipsum, nulla vero?
+       Lorem ipsum, dokkkkkklor sit amet consectetur adipisicing elit. Tempora illo nam quae repellat, eligendi obcaecati itaque odio rem enim error. Exercitationem sunt corrupti minus iure quisquam asperiores ipsum, nulla vero?
      </p>
   </main>
     <footer>
