--- a/html/ayuda.html
+++ b/html/ayuda.html
@@ -2,12 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <!--Stylesheet-->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
+    integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous" />
+    <link rel="stylesheet" href="../css/style.css">
     <!--bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!--bootstrap-->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/style.css">
      <!--keywords-->
      <meta name="keywords" content="salud, portal, ris, estudios, imagenes, emr, clinica, medicina, medicos, paciente, ayuda, redes sociales, venezuela, caracas, preguntas, hospital, rx, rm, estudios">
     <!--descripcion-->
@@ -33,7 +36,7 @@
     <main>
      
      <p>
-       Lorem ipsum, dokkkkkklor sit amet consectetur adipisicing elit. Tempora illo nam quae repellat, eligendi obcaecati itaque odio rem enim error. Exercitationem sunt corrupti minus iure quisquam asperiores ipsum, nulla vero?
+       Lorem ipsum, doglor sit amet consectetur adipisicing elit. Tempora illo nam quae repellat, eligendi obcaecati itaque odio rem enim error. Exercitationem sunt corrupti minus iure quisquam asperiores ipsum, nulla vero?
      </p>
   </main>
     <footer>
