--- a/html/contacto.html
+++ b/html/contacto.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="../css/style.css">
       <!--keywords-->
       <meta name="keywords" content="salud, portal, ris, estudios, imagenes, emr, clinica,contacto, his, redes sociales, instagram, twitter, whatsapp, empresa, pyme, venezuela,">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
      <!--descripcion-->
      <meta name="description" content="neoportal, portal de salud en la comodidad de tu casas">
       <title>neoportal - contacto</title>
@@ -32,40 +33,90 @@
     </header>
     <main>
         <section class = "contacto">
-            <ul>
-            <div class = "border-contact">
-                <li class = "lista-c">Nombre</li>
+            <div class = "content">
+                <h2>CONTACTO</h2>
+                <P>Si tienes alguna consulta o duda, puedes escribirnos por estos medios de contacto</P>
+                <div class="container-contacto">
+                    <div class="contact-info">
+                        <div class="box-contact">
+                            <div class="icon-contact"> <i class="fas fa-map-marker-alt"> </i> </div>
+                               <div class = "contact-text">
+                                   <h3>DIRECCION</h3>
+                                   <p>Altamira, Caracas</p>
+                               </div>
+                            </div>
+                <div class="box-contact">
+                    <div class="icon-contact"> <i class="fas fa-phone"> </i></i> </div>
+                        <div class = "contact-text">
+                            <h3>TELEFONOS</h3>
+                                <p>+584241326554</p>
+                            </div>
+                    </div>
+                    <div class="box-contact">
+                        <div class="icon-contact"> <i class="fas fa-mail-bulk"></i></div>
+                            <div class = "contact-text">
+                             <h3>EMAIL</h3>
+                         <p>soporte@neodcm.com</p>
+                    </div>
+                </div>
+                <div class="contact-form">
+                    <form>
+                        <h2>
+                            Enviar mensaje
+                        </h2>
+                        <div class="input-box">
+                            <input type="text" name= "" required = "required">
+                            <span>Nombre</span>
+                        </div>
+                        <div class="input-box">
+                            <input type="text" name= "" required = "required">
+                            <span>Apellido</span>
+                        </div>
+                        <div class="input-box">
+                            <input type="text" name= "" required = "required">
+                            <span>Cedula</span>
+                        </div>
+                        <div class="input-box">
+                            <input type="text" name= "" required = "required">
+                            <span>Correo</span>
+                        </div>
+                        <div class="input-box">
+                            <textarea  required = "required"> </textarea>
+                            <span>Mensaje</span>
+                        </div>
+                        <div class="input-box">
+                            <input  type = "submit" name ="" value = "Send"> </textarea>
+                            <span>Mensaje</span>
+                        </div>
+                    </form>
+                </div>
             </div>
-            <div class = "border-contact">
-                <li class = "lista-c">correo electronico</li>
-            </div>
-            <div class = "border-contact">
-                <li class = "lista-c">Mensaje </li>
-            </div>
-            </ul>
+        </div>
+    </section>
        </main>
        <footer>
-        <div class = "footer-container">
-            <div class = "footer">
-                <div class = "footer-heading ">
-                <h1 class = "h1">NEOdcm </h1>
-                <h2>REDES SOCIALES</h2>
-                <a href=""><img src="" alt="">hola</a>
-                <a href=""><img src="" alt="">hola</a>
-                <a href=""><img src="" alt="">hola</a>
-            </div>
-            <div class = "footer-heading1 ">
-                <h2 class = "h1"> ALTAMIRA, CARACAS.</h2>
-                <a href="">Contacto</a>
-                <a href="">Terminos de Servicio</a>
-                <a href="">Usuarios</a>
-                <p class = "copyright"> Copyright @2018-2021 NEODCM Servicios. All rights reserved. </p>
+        <!--nombre de la empresa y copyright-->
+       <div class = "footer-container">
+        <div class = "footer">
+            <div class = "footer-heading ">
+            <h1 class = "h1">NEOdcm </h1>
+            <h2>REDES SOCIALES</h2>
+            <a href=""><i class="fab fa-twitter"></i></a>
+            <a href=""><i class="fab fa-instagram"></i></a>
+            <a href=""><i class="fab fa-facebook-f"></i></a>
         </div>
-        <div class = "footer-heading2 ">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3923.0676122097316!2d-66.85277488620358!3d10.49533639251261!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8c2a59ab77f5c0c9%3A0xcf75bcc2d0b2cf12!2sEdificio%20Sede%20Gerencial%2C%20Av.%20Principal%20de%20La%20Castellana%2C%20Av.%20Eugenio%20Mendoza%2C%20Caracas%201060%2C%20Distrito%20Capital!5e0!3m2!1ses-419!2sve!4v1638574636264!5m2!1ses-419!2sve" width="200" height="150" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        <div class = "footer-heading1 ">
+            <h2 class = "h1"> ALTAMIRA, CARACAS.</h2>
+            <a href="../html/contacto.html">Contacto</a>
+            <a href="../html/nosotros.html">Terminos de Servicio</a>
+            <a href="">Usuarios</a>
+            <p class = "copyright"> Copyright @2018-2021 NEODCM Servicios. All rights reserved. </p>
     </div>
+    <div class = "footer-heading2 ">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3923.0676122097316!2d-66.85277488620358!3d10.49533639251261!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8c2a59ab77f5c0c9%3A0xcf75bcc2d0b2cf12!2sEdificio%20Sede%20Gerencial%2C%20Av.%20Principal%20de%20La%20Castellana%2C%20Av.%20Eugenio%20Mendoza%2C%20Caracas%201060%2C%20Distrito%20Capital!5e0!3m2!1ses-419!2sve!4v1638574636264!5m2!1ses-419!2sve" width="200" height="150" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+</div>
+</div>
     </div>
-        </div>
-        </footer>
+    </footer>
 </body>
 </html>
