--- a/html/servicios.html
+++ b/html/servicios.html
@@ -33,16 +33,9 @@
         </div>
     </header>
     <main>
-        <!--<div class = "grid-container">
-            <div class = "grid-item"> NEOPACS</div>
-            <div class = "grid-item"> NEORIS </div>
-            <div class = "grid-item"> NEOPORTAL </div>
-            <div class = "grid-item"> NEODCM </div>-->
             <body>
                 <div class="container">
                   <div class="details">
-
-                    <p>Nuestra compañía ofrece uan serie de serv</p>
                   </div>
                   <div class="main-box">
                     <div class="box box-grey">
@@ -86,14 +79,15 @@
     </div>
        </main>
        <footer>
-    <div class = "footer-container">
+        <!--nombre de la empresa y copyright-->
+       <div class = "footer-container">
         <div class = "footer">
             <div class = "footer-heading ">
             <h1 class = "h1">NEOdcm </h1>
             <h2>REDES SOCIALES</h2>
-            <a href=""><img src="" alt="">hola</a>
-            <a href=""><img src="" alt="">hola</a>
-            <a href=""><img src="" alt="">hola</a>
+            <a href=""><i class="fab fa-twitter"></i></a>
+            <a href=""><i class="fab fa-instagram"></i></a>
+            <a href=""><i class="fab fa-facebook-f"></i></a>
         </div>
         <div class = "footer-heading1 ">
             <h2 class = "h1"> ALTAMIRA, CARACAS.</h2>
@@ -108,7 +102,5 @@
 </div>
     </div>
     </footer>
-
-    
 </body>
 </html>
