--- a/html/nosotros.html
+++ b/html/nosotros.html
@@ -13,6 +13,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <!--keywords-->
      <meta name="keywords" content="salud, portal, ris, estudios, imagenes, emr, clinica, nosotros, empresa, pyme, venezuela, caracas">
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
      <!--descripcion-->
     <meta name="description" content="neoportal, portal de salud en la comodidad de tu casas">
     <link rel="stylesheet" href="../css/style.css">
@@ -35,73 +36,43 @@
         </div>
     </header>
     <main>
-        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img class="d-block w-100" src="../multimedia/clinica1.jpg" alt="First slide">
-              </div>
-              <div class="carousel-item">
-                <img class="d-block w-100" src="../multimedia/clinica2.jpg" alt="Second slide">
-              </div>
-              <div class="carousel-item">
-                <img class="d-block w-100" src="../multimedia/clinica3.jpg" alt="Third slide">
-              </div>
+      <div class="nosotros-section">
+        <div class="nosotros-container">
+            <h2>NOSOTROS</h2>
+            <p class="text">
+              Somos una empresa de desarrollo de software en el área médica con énfasis en radiología, tenemos más de 10 años de experiencia en el ramo; razón por la cual queremos trasladar esa experticia a las soluciones y productos que ofrecemos a nuestros clientes, para mejorar al máximo el flujo de trabajo de centros de imágenes, clínicas y hospitales.
+            </p>
+            <div class="skills">
+                <span>Soporte tecnico especializado en el area medica</span>
+                <span>Intregracion de todo tipo de sistemas</span>
+                <span>Cursos dicom</span>
             </div>
-            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="sr-only">Next</span>
-            </a>
-          </div>
-        
-        <!-- <section class = "main-principal">
-            <p class = "nosotros">Lorem ipsum, dolor sit amet
-                 consectetur adipisicing elit. Culp
-                 a modi cum recusandae distinctio necessitatibus. Cu
-                 mque assumenda voluptas ullam facilis provident a tenetu
-                 r quasi incidunt. Amet officia labore aspernatur dolore illum.</p> -->
-        </section>
-        <section class = "main-principal">
-            <p class = "nosotros">Lorem ipsum, dolor sit amet
-                 consectetur adipisicing elit. Culp
-                 a modi cum recusandae distinctio necessitatibus. Cu
-                 mque assumenda voluptas ullam facilis provident a tenetu
-                 r quasi incidunt. Amet officia labore aspernatur dolore illum.</p>
-        </section>
-        <section class = "main-principal">
-            <p class = "nosotros">Lorem ipsum, dolor sit amet
-                 consectetur adipisicing elit. Culp
-                 a modi cum recusandae distinctio necessitatibus. Cu
-                 mque assumenda voluptas ullam facilis provident a tenetu
-                 r quasi incidunt. Amet officia labore aspernatur dolore illum.</p>
-        </section>
-       </main>
-       <footer>
-        <div class = "footer-container">
-          <div class = "footer">
-              <div class = "footer-heading ">
-              <h1 class = "h1">NEOdcm </h1>
-              <h2>REDES SOCIALES</h2>
-              <a href=""><img src="" alt="">hola</a>
-              <a href=""><img src="" alt="">hola</a>
-              <a href=""><img src="" alt="">hola</a>
-          </div>
-          <div class = "footer-heading1 ">
-              <h2 class = "h1"> ALTAMIRA, CARACAS.</h2>
-              <a href="">Contacto</a>
-              <a href="">Terminos de Servicio</a>
-              <a href="">Usuarios</a>
-              <p class = "copyright"> Copyright @2018-2021 NEODCM Servicios. All rights reserved. </p>
-      </div>
-      <div class = "footer-heading2 ">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3923.0676122097316!2d-66.85277488620358!3d10.49533639251261!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8c2a59ab77f5c0c9%3A0xcf75bcc2d0b2cf12!2sEdificio%20Sede%20Gerencial%2C%20Av.%20Principal%20de%20La%20Castellana%2C%20Av.%20Eugenio%20Mendoza%2C%20Caracas%201060%2C%20Distrito%20Capital!5e0!3m2!1ses-419!2sve!4v1638574636264!5m2!1ses-419!2sve" width="200" height="150" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-  </div>
-  </div>
-      </div>
-      </footer>
-
+        </div>
+    </div>
+      </main>
+      <footer>
+        <!--nombre de la empresa y copyright-->
+       <div class = "footer-container">
+        <div class = "footer">
+            <div class = "footer-heading ">
+            <h1 class = "h1">NEOdcm </h1>
+            <h2>REDES SOCIALES</h2>
+            <a href=""><i class="fab fa-twitter"></i></a>
+            <a href=""><i class="fab fa-instagram"></i></a>
+            <a href=""><i class="fab fa-facebook-f"></i></a>
+        </div>
+        <div class = "footer-heading1 ">
+            <h2 class = "h1"> ALTAMIRA, CARACAS.</h2>
+            <a href="../html/contacto.html">Contacto</a>
+            <a href="../html/nosotros.html">Terminos de Servicio</a>
+            <a href="">Usuarios</a>
+            <p class = "copyright"> Copyright @2018-2021 NEODCM Servicios. All rights reserved. </p>
+    </div>
+    <div class = "footer-heading2 ">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3923.0676122097316!2d-66.85277488620358!3d10.49533639251261!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8c2a59ab77f5c0c9%3A0xcf75bcc2d0b2cf12!2sEdificio%20Sede%20Gerencial%2C%20Av.%20Principal%20de%20La%20Castellana%2C%20Av.%20Eugenio%20Mendoza%2C%20Caracas%201060%2C%20Distrito%20Capital!5e0!3m2!1ses-419!2sve!4v1638574636264!5m2!1ses-419!2sve" width="200" height="150" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+</div>
+</div>
+    </div>
+    </footer>
 </body>
 </html>
