--- a/index.html
+++ b/index.html
@@ -11,21 +11,26 @@
     <meta name="keywords" content="salud, portal, ris, estudios, imagenes, emr, clinica, medicos, medicinas, medicina, paciente, sistema, hospital, his, lis,">
      <!--descripcion-->
      <meta name="description" content="neoportal, portal de salud en la comodidad de tu casas">
+      <!--bootstrap-->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/style.css">
+    <!--fonts-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
     <title>neoportal - home</title>
 </head>
 <body>
-
-    <!--bootstrap-->
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
-   
+   <section>
     <header class= "header-principal">
         <div class = img-container>
           <div class = "img-item"> <a href="index.html"> <img src="../multimedia/neoportalsolo.png" class = "neoportalsolo" alt="neoportal"></a></div>
         <!--menu de inicio-->
         <nav class = "#header">
-            <div class = "contenedor-header">
+            <input type="checkbox" id="checkbox">
+            <label for="check" class="checkbtn">
+              <i class="fas fa-bars"></i>
+            </label>
             <ul class = "ul-nav">
                 <li class="menu"> <a href="index.html" class = "enlace">INICIO</a></li>
                 <li class = "menu"><a href="../html/nosotros.html" class = "enlace">NOSOTROS</a></li>
@@ -34,44 +39,32 @@
                 <li class = "menu"><a href="../html/contacto.html" class = "enlace">CONTACTO</a></li>
             </ul>
         </div>
-        </div>
     </div>
     </header>
     <main class = "main">
-        <div class = "div-principal">
-        <div>
-            <p class = "p-principal"> <strong> Innovación en el área de salud, ahora desde la comodidad de donde te encuentres. </strong></p> <p class = "p-secundario">Estamos a tu disposición para hacer más sencilla la busqueda de tus resultados</p>
+        <div class = "contenido">
+        <div class = "info">        
+            <h2> Innovación en el área de salud, ahora desde la comodidad de donde te encuentres.<br><span>Estamos a tu disposición para hacer más sencilla la busqueda de tus resultados</span></h2>
+        <a href="../NEO/html/nosotros.html" class = "btn1"> MAS INFORMACION </a>  <a href="https://api.whatsapp.com/send?phone=584241326554" class = "btn2"> <i class="fab fa-whatsapp"> </i>SOPORTE </a>
         </div>
             <div class = "img">
                 <img src="multimedia/neoportalnube.png" class = "neonube" alt="neonube">
             </div>
         </div>
-        <!--imagen-->
         </section>
-        <!--whatsapp button-->
-        <div class = "container-whatsapp"></div>
-        <div class = "item-whatsapp">
-        <button type="button" class="btn btn-outline-light align-items-end"><a href="https://api.whatsapp.com/send?phone=584241326554"><img src="multimedia/whatsapp1.png" class="rounded " width = "70px" alt=""></a> </button>
+        
     </div>
     </main>
     <footer>
-      <!--  <div class = "footer-nav">
-            <ul>
-                <li class="menu-rs1"> instagram </li>
-                <li class="menu-rs2">twitter</li>
-                <li class="menu-rs3">facebook</li>
-            </ul> 
-        </div>--> 
-         
         <!--nombre de la empresa y copyright-->
        <div class = "footer-container">
         <div class = "footer">
             <div class = "footer-heading ">
             <h1 class = "h1">NEOdcm </h1>
             <h2>REDES SOCIALES</h2>
-            <a href=""><img src="" alt="">hola</a>
-            <a href=""><img src="" alt="">hola</a>
-            <a href=""><img src="" alt="">hola</a>
+            <a href=""><i class="fab fa-twitter"></i></a>
+            <a href=""><i class="fab fa-instagram"></i></a>
+            <a href=""><i class="fab fa-facebook-f"></i></a>
         </div>
         <div class = "footer-heading1 ">
             <h2 class = "h1"> ALTAMIRA, CARACAS.</h2>
